--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "python3 compiler/main.py && docusaurus start",
-    "build": "python3 compiler/main.py && docusaurus build",
+    "build": "python3 compiler/main.py --all && docusaurus build",
     "dev": "python3 compiler/main.py --backward",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
